Update Trend Analysis of Financial News and Stock Prices.ipynb

--- a/Trend Analysis of Financial News and Stock Prices.ipynb
+++ b/Trend Analysis of Financial News and Stock Prices.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Trend Analysis between Financial News and Stock Prices\n",
-    "#### Group members: Akshita Chandiramani, Ruchita Jadhav, Sanjeev Ramasamy\n",
+    "#### Group members: Ruchita Jadhav\n",
     "\n",
     "Fluctuations in stock prices are based on supply and demand of that stock. This affiliation is tangled with the type of news that is issued at any time. News regarding any firm influences the price of their stocks. Positive news creates a good impression regarding the firm and causes investors to buy stocks, thereby increasing the demand. This, in turn, increases the price of the stock. Negative news, on the other hand, such as a poor earnings report, political uncertainty, or a scandal will cause the investors to sell stocks which transforms into a decrease in stock price.\n",
     "\n",
